--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"start": "node dist/index.js",
-		"build": "tsc --build tsconfig.json",
-		"watch": "nodemon --config nodemon.json",
-		"compile": "tsc src/index.ts --outDir ./dist",
+		"build:ts": "tsc --build tsconfig.json",
+		"build:es": "babel ./src --out-dir ./dist --source-maps --copy-files",
+		"watch:js": "nodmeon --config nodemon.json",
+		"watch:es": "nodemon --config nodemon.es.json",
+		"watch:ts": "nodemon --config nodemon.ts.json",
+		"watch:js-file": "nodemon --watch src/ --exec 'node' ",
+		"watch:es-file": "nodemon --watch src/ --exec 'babel-node' ",
+		"watch:ts-file": "nodemon --watch src/ --exec 'ts-node' ",
 		"clear": "npm run clean",
 		"clean": "rm -R ./dist"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.14.5",
+		"@babel/core": "^7.14.6",
+		"@babel/node": "^7.14.7",
+		"@babel/preset-env": "^7.14.7",
 		"@types/node": "^15.12.4",
 		"nodemon": "^2.0.7",
 		"ts-node": "^10.0.0",
